* fix broken nav on ios

--- a/src/sass/bootstrap/_drawers.scss
+++ b/src/sass/bootstrap/_drawers.scss
@@ -114,9 +114,11 @@
   }
 
   &-hidden {
+      // TODO :: hiding this temporarily
+      display: none;
     height: 100vh;
     opacity: 0;
-    visibility: hidden;
+    pointer-events: none;
     transform: translateY(-100vh);
     transition: 0.5s transform ease;
 
@@ -157,6 +159,8 @@
     &.drawer-expanded {
       transform: translateY(0);
       opacity: 1;
+      display: none;
+      pointer-events: all;
 
       .drawer-content {
         opacity: 1;
@@ -180,7 +184,6 @@
 
     &.drawer-expanded {
       min-height: auto;
-      visibility: visible;
     }
   }
 
