--- a/src/sass/bootstrap/_header.scss
+++ b/src/sass/bootstrap/_header.scss
@@ -228,6 +228,7 @@
 
       order: 1;
       flex: 1 1 auto;
+      z-index: 9;
 
     }
     // END - HAMBURGER TOGGLE
@@ -354,11 +355,20 @@
             right: 0;
             bottom: 0;
             left: 0;
-            z-index: 1;
+            z-index: 9;
+          }
+
+          // disable dropdown toggle on mobile
+          a.dropdown-toggle {
+            pointer-events: none;
           }
 
           // desktop
           @media (min-width: $screen-sm-min) {
+            // enable dropdown toggle on desktop
+            a.dropdown-toggle {
+              pointer-events: all;
+            }
             &:hover .dropdown-menu {
               cursor: pointer;
               display: block;
@@ -493,18 +503,25 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    transform: translateX(-100%);
-    transition: $ui-animation-time transform $ui-animation-ease;
-
-    &.off-canvas--right {
-      transform: translateX(100%);
-      background-color: $brand-alt-deep;
-    }
+    // transform: translateX(-100%);
+    display: none;
+    // transition: $ui-animation-time transform $ui-animation-ease;
 
     // show menu
     &.collapse--off-canvas {
-      transform: translateX(0);
+      display: flex;
+      // transform: translateX(0);
     }
+
+    &.off-canvas--right {
+      display: none;
+      // transform: translateX(-200%);
+      background-color: $brand-alt-deep;
+      &.collapse--off-canvas {
+        display: block;
+      }
+    }
+
   }
 }
 
